// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime visual snapshots > matches desktop visual baseline 1`] = `
[
  {
    "background": "rgba(0, 0, 0, 0.04)",
    "border": "1px solid rgba(0, 0, 0, 0.18)",
    "borderRadius": "",
    "boxShadow": "",
    "height": "72px",
    "id": "90000000-0000-4000-8000-000000000001",
    "left": "0px",
    "top": "0px",
    "type": "Stack",
    "width": "1280px",
  },
  {
    "background": "rgba(37, 99, 235, 0.12)",
    "border": "1px solid rgba(37, 99, 235, 0.45)",
    "borderRadius": "8px",
    "boxShadow": "",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000002",
    "left": "0px",
    "top": "0px",
    "type": "Button",
    "width": "32px",
  },
  {
    "background": "rgba(255, 255, 255, 0.95)",
    "border": "1px solid rgba(0, 0, 0, 0.16)",
    "borderRadius": "12px",
    "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.08)",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000003",
    "left": "0px",
    "top": "40px",
    "type": "Card",
    "width": "1280px",
  },
  {
    "background": "rgba(0, 0, 0, 0.08)",
    "border": "1px solid rgba(0, 0, 0, 0.2)",
    "borderRadius": "999px",
    "boxShadow": "",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000004",
    "left": "0px",
    "top": "0px",
    "type": "Badge",
    "width": "32px",
  },
]
`;

exports[`runtime visual snapshots > matches mobile visual baseline 1`] = `
[
  {
    "background": "rgba(0, 0, 0, 0.04)",
    "border": "1px solid rgba(0, 0, 0, 0.18)",
    "borderRadius": "",
    "boxShadow": "",
    "height": "72px",
    "id": "90000000-0000-4000-8000-000000000001",
    "left": "0px",
    "top": "0px",
    "type": "Stack",
    "width": "375px",
  },
  {
    "background": "rgba(37, 99, 235, 0.12)",
    "border": "1px solid rgba(37, 99, 235, 0.45)",
    "borderRadius": "8px",
    "boxShadow": "",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000002",
    "left": "0px",
    "top": "0px",
    "type": "Button",
    "width": "32px",
  },
  {
    "background": "rgba(255, 255, 255, 0.95)",
    "border": "1px solid rgba(0, 0, 0, 0.16)",
    "borderRadius": "12px",
    "boxShadow": "0 1px 3px rgba(0, 0, 0, 0.08)",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000003",
    "left": "0px",
    "top": "40px",
    "type": "Card",
    "width": "375px",
  },
  {
    "background": "rgba(0, 0, 0, 0.08)",
    "border": "1px solid rgba(0, 0, 0, 0.2)",
    "borderRadius": "999px",
    "boxShadow": "",
    "height": "32px",
    "id": "90000000-0000-4000-8000-000000000004",
    "left": "0px",
    "top": "0px",
    "type": "Badge",
    "width": "32px",
  },
]
`;
